--- a/app-source/scss/partials/_note.scss
+++ b/app-source/scss/partials/_note.scss
@@ -79,16 +79,33 @@
 	
 	ul {
 		
-		list-style-type: disc;
+		list-style-type: square;
 		margin-left: 2ch;
 		
-		ul { list-style-type: circle; }
+		ul {
+			
+			list-style-type: disc;
+			
+			ul {
+				
+				list-style-type: circle;
+			}
+		}
 	}
 	
 	ol {
 		
 		list-style-type: decimal;
 		margin-left: 2ch;
+	}
+	
+	ul ul,
+	ol ol,
+	ol ul,
+	ul ol {
+		
+		margin-top: 0;
+		margin-bottom: 0;
 	}
 	
 	li {
