--- a/app-source/scss/partials/_prefs.scss
+++ b/app-source/scss/partials/_prefs.scss
@@ -1,25 +1,8 @@
 body {
 	
 	background-color: var(--window);
-	padding: 43px 20px 20px;
+	padding: 20px 20px;
 	color: var(--text);
-}
-
-header {
-	
-	font-size: 13px;
-	line-height: 23px;
-	text-align: center;
-	height: 23px;
-	background: var(--header);
-	background-size: 100% 23px;
-	background-position: left top;
-	border-bottom: 1px solid var(--header-border);
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	-webkit-app-region: drag;
 }
 
 section {
