sidebar / check history state
selecting a new note in the sidebar will prompt a save dialog if the current note has modifications

--- a/app-source/scss/partials/_vars-and-mixins.scss
+++ b/app-source/scss/partials/_vars-and-mixins.scss
@@ -7,6 +7,7 @@
 	--text-light:			rgba(69,69,69,.7);
 	--app-color-focus:		rgba(254,226,152,.5);
 	--dividers:				#e6e6e6;
+	--header-border:		#b5b4b5;
 	--accent:				#3478f6;
 	--accent-light:			#3279FF;
 	--accent-dark:			#004EE1;
@@ -16,7 +17,7 @@
 	--toolbar-hover:		rgba(0,0,0,.05);
 	--toolbar-border:		rgba(69,69,69,.5);
 	
-	// edit					
+	// edit
 	
 	--edit: 				#ffffff;
 	--edit-hover:			rgba(69,69,69,.5);
@@ -85,6 +86,7 @@
 	--text-light:			rgba(255,255,255,.6);
 	--app-color-focus:		#343434;
 	--dividers:				#484848;
+	--header-border:		#000000;
 	
 	// toolbar
 	
