form fields in dark mode

--- a/app-source/scss/partials/_vars-and-mixins.scss
+++ b/app-source/scss/partials/_vars-and-mixins.scss
@@ -102,9 +102,9 @@
 	// modal
 	
 	--window:				#343434;
-	--input-color:			#dcdcdc;
-	--input-border:			#565656;
-	--input-background:		#292724;
+	--input-color:			rgba(255,255,255,.75);
+	--input-border:			rgba(255,255,255,.1);
+	--input-background:		rgba(255,255,255,.05);
 	--select:				#616161;
 	--select-border:		#7f7f7f;
 	
