--- a/app-source/scss/partials/_forms.scss
+++ b/app-source/scss/partials/_forms.scss
@@ -145,6 +145,28 @@ footer {
 	}
 	
 	canvas { filter: invert(100%); }
+	
+	form {
+		
+		ul {
+			
+			li {
+				
+				input[type="url"],
+				input[type="text"],
+				input[type="number"] {
+					
+					border-top: 0;
+					border-left: 0;
+					border-right: 0;
+					
+					box-shadow:
+						inset 0 0 1px rgba(255,255,255,.5),
+						inset 0 6px 4px -4px rgba(0,0,0,.2);
+				}
+			}
+		}
+	}
 }
 
 //note(dgmid): user themes
