--- a/app-source/scss/partials/_prefs.scss
+++ b/app-source/scss/partials/_prefs.scss
@@ -143,10 +143,11 @@ section {
 		
 		input[type="radio"] {
 			
+			appearance: none;
 			margin: 0 6px 0 0;
 			width: 16px;
 			height: 16px;
-			opacity: 0;
+			border-radius: 50%;
 			
 			& + svg {
 				
@@ -163,6 +164,13 @@ section {
 				.radio-back { fill: var(--accent-light); }
 				.radio-border-light { fill: var(--accent-dark) }
 				.radio-checked { opacity: 1; }
+			}
+			
+			&:focus {
+				
+				outline: none;
+				border-color: var(--accent);
+				box-shadow: 0 0 2px 3px var(--accent-light);
 			}
 		}
 		
@@ -223,7 +231,11 @@ section {
 			box-shadow: inset 0 2px 0 var(--accent);
 		}
 			
-		input:focus + .slider { box-shadow: 0 0 1px var(--accent); }
+		input:focus + .slider {
+			
+			border-color: var(--accent);
+			box-shadow: 0 0 2px 3px var(--accent-light);
+		}
 			
 		input:checked + .slider:before { transform: translateX(21px); }
 		
@@ -267,6 +279,12 @@ section {
 				box-shadow: inset 0 2px 0 var(--accent-dark);
 			}
 			
+			input:focus + .slider {
+				
+				border-color: var(--accent);
+				box-shadow: 0 0 2px 3px var(--accent-light);
+			}
+			
 			input[type="radio"] {
 				
 				& + svg {
@@ -285,6 +303,17 @@ section {
 					.radio-border-light { fill: transparent; }
 				}
 			}
+			
+			.switch	{
+				
+				.slider {
+					
+					background-color: transparent;
+					background-image: linear-gradient(rgba(255,255,255,.14), rgba(255,255,255,.28));
+				}
+			}
+			
+			input:checked+.slider { background-image: none; }
 		}
 	}
 }
