--- a/app-source/scss/partials/_interface.scss
+++ b/app-source/scss/partials/_interface.scss
@@ -80,6 +80,13 @@ footer {
 			border: 1px solid #b9b9b9;
 			border-radius: 3px;
 			box-shadow: inset 0 0 0 1px rgba(0,0,0,0.05);
+			
+			&:focus {
+				
+				outline: none;
+				border-color: var(--accent);
+				box-shadow: 0 0 3px 1px var(--accent-light);
+			}
 		}
 		
 		#clear {
@@ -615,6 +622,13 @@ aside {
 			border-color: var(--app-light);
 		}
 		
+		&:focus {
+			
+			outline: none;
+			border-color: var(--accent);
+			box-shadow: 0 0 3px 1px var(--accent-light);
+		}
+		
 		&.icon-heading i { mask: var(--icon-heading) no-repeat center center; }
 		&.icon-b i { mask: var(--icon-b) no-repeat center center; }
 		&.icon-i i { mask: var(--icon-i) no-repeat center center; }
@@ -666,6 +680,13 @@ aside {
 				background-color: rgba(255,255,255,.1);
 				border-color: rgba(255,255,255,.1);
 				box-shadow: inset 0 2px 2px rgba(0,0,0,0.1);
+				
+				&:focus {
+					
+					outline: none;
+					border-color: var(--accent);
+					box-shadow: 0 0 3px 1px var(--accent-light);
+				}
 			}
 		}
 		
