--- a/app-source/scss/partials/_forms.scss
+++ b/app-source/scss/partials/_forms.scss
@@ -117,6 +117,33 @@ form {
 			input[type="number"] {
 				
 				padding-right: 5px;
+				position: relative;
+				overflow: visible !important;
+				position: relative;
+				
+				&::-webkit-outer-spin-button, 
+				&::-webkit-inner-spin-button {
+					overflow: visible !important;
+					-webkit-appearance: none;
+					width: 9px;
+					opacity: 1;
+					
+					position: absolute;
+					top: 3px;
+					bottom: 3px;
+					right: 6px;
+				}
+				
+				
+				&::-webkit-inner-spin-button {
+					
+					border-radius: 4px;
+					background-color: var(--input-background);
+					background-image: var(--spin-button);
+					background-position: center center;
+					background-repeat: no-repeat;
+					border: 1px solid var(--input-border);
+				}
 			}
 			
 			input[type="checkbox"] {
@@ -191,6 +218,17 @@ footer {
 					box-shadow:
 						inset 0 0 1px rgba(255,255,255,.5),
 						inset 0 6px 4px -4px rgba(0,0,0,.2);
+				}
+				
+				input[type="number"] {
+					
+					&::-webkit-inner-spin-button {
+						
+						border-left: 0;
+						border-right: 0;
+						border-bottom: 0;
+						width: 11px;
+					}
 				}
 				
 				input[type="checkbox"] {
