--- a/app-source/scss/partials/_interface.scss
+++ b/app-source/scss/partials/_interface.scss
@@ -26,6 +26,7 @@ footer {
 	
 	width: 200px;
 	border-right: 1px solid var(--dividers);
+	padding: 0 10px;
 	position: absolute;
 	top: 0;
 	left: -200px;
@@ -65,7 +66,7 @@ footer {
 	.search-field {
 		
 		height: 40px;
-		padding: 8px 10px;
+		padding: 8px 0;
 		position: relative;
 		
 		#search {
@@ -110,6 +111,7 @@ footer {
 		background-color: transparent;
 		font-size: 14px;
 		line-height: 24px;
+		border-radius: 5px;
 		
 		transition: background-color .15s;
 		
@@ -392,8 +394,9 @@ aside {
 	
 	.inner {
 		
-		overflow-x: hidden; 
-		overflow-y: scroll;	
+		overflow-x: hidden;
+		overflow-y: scroll;
+		padding: 10px 10px 0;
 	}
 }
 
@@ -413,10 +416,10 @@ aside {
 	button {
 		
 		width: 100%;
-		padding: 11px 0;
+		padding: 11px 10px 11px 0;
 		display: block;
 		border: 0;
-		border-radius: 0;
+		border-radius: 5px;
 		text-align: left;
 		color: var(--text);
 		background-color: transparent;
@@ -429,7 +432,7 @@ aside {
 			position: absolute;
 			bottom: 0;
 			left: 25px;
-			right: 0;
+			right: 10px;
 			height: 1px;
 			background-color: var(--dividers);
 		}
