--- a/app-source/scss/partials/_vars-and-mixins.scss
+++ b/app-source/scss/partials/_vars-and-mixins.scss
@@ -6,7 +6,7 @@
 	--text:					#454545;
 	--text-light:			rgba(69,69,69,.7);
 	--background:			#ffffff;
-	--aside:				#ffffff;
+	--main:				#ffffff;
 	--app-color-focus:		rgba(254,226,152,.5);
 	--dividers:				#e6e6e6;
 	--header-border:		#b5b4b5;
@@ -87,7 +87,7 @@
 	--text:					#dcdcdc;
 	--text-light:			rgba(255,255,255,.6);
 	--background:			#1d1d1d;
-	--aside:				rgba(30,30,30,.75);
+	--main:				rgba(30,30,30,.8);
 	--app-color-focus:		#343434;
 	--dividers:				#484848;
 	--header-border:		#000000;
