--- a/app-source/scss/partials/_vars-and-mixins.scss
+++ b/app-source/scss/partials/_vars-and-mixins.scss
@@ -6,7 +6,7 @@
 	--text:					#454545;
 	--text-light:			rgba(69,69,69,.7);
 	--background:			#ffffff;
-	--main:				#ffffff;
+	--main:					#ffffff;
 	--app-color-focus:		rgba(254,226,152,.5);
 	--dividers:				#e6e6e6;
 	--header-border:		#b5b4b5;
@@ -55,24 +55,24 @@
 	
 	--code-red-lt:			#fb434a;
 	--code-red-dk:			#af2e33;
-	--code-orange-lt:			#ffa657; //#f27e17;
-	--code-orange-dk:			#a85710;
-	--code-yellow-lt:			#fecb57;
-	--code-yellow-dk:			#b18d3c;
+	--code-orange-lt:		#ffa657;
+	--code-orange-dk:		#a85710;
+	--code-yellow-lt:		#fecb57;
+	--code-yellow-dk:		#b18d3c;
 	--code-aqua-lt:			#50e3c2;
 	--code-aqua-dk:			#379e87;
-	--code-green-lt:			#18bf64;
-	--code-green-dk:			#108545;
-	--code-khaki-lt:			#63a35c;
-	--code-khaki-dk:			#457140;
+	--code-green-lt:		#18bf64;
+	--code-green-dk:		#108545;
+	--code-khaki-lt:		#63a35c;
+	--code-khaki-dk:		#457140;
 	--code-cyan-lt:			#3d9fc7;
 	--code-cyan-dk:			#2a6e8a;
 	--code-blue-lt:			#007cff;
 	--code-blue-dk:			#0056b2;
-	--code-indigo-lt:			#0058b3;
-	--code-indigo-dk:			#003d7c;
+	--code-indigo-lt:		#0058b3;
+	--code-indigo-dk:		#003d7c;
 	--code-purple-lt:			#9013fe;
-	--code-purple-dk:			#640db1;
+	--code-purple-dk:		#640db1;
 	--code-pink-lt:			#ff42f6;
 	--code-pink-dk:			#b22eab;
 	--code-grey-lt:			#acbbd0;
@@ -87,7 +87,7 @@
 	--text:					#dcdcdc;
 	--text-light:			rgba(255,255,255,.6);
 	--background:			#1d1d1d;
-	--main:				rgba(30,30,30,.8);
+	--main:					rgba(30,30,30,.70);
 	--app-color-focus:		#343434;
 	--dividers:				#484848;
 	--header-border:		#000000;
