--- a/app-source/scss/partials/_vars-and-mixins.scss
+++ b/app-source/scss/partials/_vars-and-mixins.scss
@@ -10,11 +10,11 @@
 	--main:					#ffffff;
 	--app-color-focus:		rgba(254,226,152,.5);
 	--dividers:				#e6e6e6;
-	--header-border:		#b5b4b5;
+	--header-border:		#dcdcdc;
 	
-	--icons-enabled:		rgba(80,80,80,.8);
-	--icons-disabled:		rgba(80,80,80,.35);
-	--icons-active:			rgba(80,80,80,.8);
+	--icons-enabled:		rgba(0,0,0,.55);
+	--icons-disabled:		rgba(0,0,0,.3);
+	--icons-active:			rgba(0,0,0,.72);
 	
 	--accent:				#3478f6;
 	--accent-light:			#3279FF;
@@ -23,7 +23,7 @@
 	// toolbar
 	
 	--toolbar-hover:		rgba(0,0,0,.05);
-	--toolbar-active:		rgba(0,0,0,.05);
+	--toolbar-active:		rgba(0,0,0,.1);
 	--toolbar-border:		rgba(69,69,69,.5);
 	
 	// edit
